# Mqtt_Protobuf

./: .gitignore  .swp  CMakeLists.txt  FindMosquitto.cmake  FindMosquittopp.cmake  mosquitto.sublime-project  mosquitto.sublime-workspace  readme.md
Mqtt_Protobuf_Sketch/: Mqtt_Protobuf_Sketch.ino  addressbook.pb.c  addressbook.pb.h
cpp/: CMakeLists.txt  add_person.cc  cpp.cpp  cpp.h  main.cpp
examples/protobuf/: addressbook.pb.h
examples/protobuf_exmples/: add_person_cpp  addressbook.data  addressbook.pb.cc  list_people_cpp
messages/: CMakeLists.txt
messages_embedded/: CMakeLists.txt  FindNanopb.cmake
nanopb/: CMakeLists.txt  addressbook.proto
nanopb/examples/simple/: .Makefile.swp
protobuf_examples/: CMakeLists.txt  add_person.cc
protocol_buffers/: addressbook.proto
python/: paho_mqtt.py
